--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ default_context:
   presentation_title: "It's easier to ask forgiveness than it is to get permission"
   presentation_subtitle: "As quoted in the U.S. Navy's Chips Ahoy magazine (July 1986)"
   presentation_description: "If it's a good idea, go ahead and do it. It is much easier to apologize than it is to get permission."
+  project_repo: "cookiecutter-remarkjs"
   author_name: "Manjari Narayan"
   twitter_account: "neurostats"
   github_account: "mnarayan"
@@ -10,4 +11,3 @@ default_context:
   highlight_style: "monokai"
   highlight_lines: "true"
   aspect_ratio: "16:9"
-
