Adding info relevant to creating gh-pages branch

--- a/{{ cookiecutter.project_repo }}/Makefile
+++ b/{{ cookiecutter.project_repo }}/Makefile
@@ -1,6 +1,6 @@
 BIND_ADDRESS ?= 127.0.0.1
 PORT ?= 8000
-GITHUB_REPO ?= mnarayan/{{ cookiecutter.project_repo }}
+GITHUB_REPO ?= {{ cookiecutter.github }}/{{ cookiecutter.project_repo }}
 
 .DEFAULT_GOAL := help
 
@@ -22,6 +22,18 @@ serve: ## Serve the slides
 	@echo "Serving slides at http://$(BIND_ADDRESS):$(PORT)/"
 	@echo "Quit the server with CONTROL-C."
 	@python -m http.server --bind $(BIND_ADDRESS) $(PORT)
+
+gh-pages: ## Create gh-pages branch
+	@echo "Initializing git"
+	@git init
+	@echo "Adding remote git@github.com:$(GITHUB_REPO)"
+	@git remote add origin git@github.com:$(GITHUB_REPO)
+	@echo "Creating gh-pages branch"
+	@git checkout -b --orphan gh-pages
+	@echo "Adding files to gh-pages"
+	@git add slides.md slides.css index.html 
+	@git commit -m "Adding default flies from cookiecutter template in {{ cookiecutter.project_repo }}"
+
 
 pages: ## Push to github
 	@echo "Pushing slides to git@github.com:$(GITHUB_REPO) gh-pages"
